--- a/AshLib.csproj
+++ b/AshLib.csproj
@@ -2,19 +2,19 @@
 
   <PropertyGroup>
     <!-- <OutputType>Exe</OutputType> -->
-    <TargetFramework>net8.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
 	
 	<PackageId>AshLib</PackageId>
-    <Version>3.4.0</Version>
-	<PackageVersion>3.4.0</PackageVersion>
+    <Version>3.5.0</Version>
+	<PackageVersion>3.5.0</PackageVersion>
     <Authors>siljam</Authors>
     <Company>AshProject</Company>
 	
 	<PackageTags>ashfile json tree log deltatime fps console format ansi NO_COLOR</PackageTags>
 	<PackageDescription>AshFiles, FormatStrings, DeltaHelpers &amp; more!</PackageDescription>
-	<PackageReleaseNotes>New ReactiveList, AshFile updates</PackageReleaseNotes>
+	<PackageReleaseNotes>AshFile V4</PackageReleaseNotes>
 	
     <RepositoryUrl>https://github.com/siljamdev/AshLib</RepositoryUrl>
 	<PackageProjectUrl>https://github.com/siljamdev/AshLib</PackageProjectUrl>
