--- a/AshLib.csproj
+++ b/AshLib.csproj
@@ -6,21 +6,20 @@
     <Nullable>enable</Nullable>
 	
 	<PackageId>AshLib</PackageId>
-    <Version>3.5.1</Version>
-	<PackageVersion>3.5.1</PackageVersion>
+    <Version>3.5.2</Version>
+	<PackageVersion>3.5.2</PackageVersion>
     <Authors>siljam</Authors>
     <Company>AshProject</Company>
 	
 	<PackageTags>ashfile json tree log deltatime fps console format ansi NO_COLOR</PackageTags>
 	<PackageDescription>AshFiles, FormatStrings, DeltaHelpers &amp; more!</PackageDescription>
-	<PackageReleaseNotes>Little improvements</PackageReleaseNotes>
+	<PackageReleaseNotes>Bugfix</PackageReleaseNotes>
 	
     <RepositoryUrl>https://github.com/siljamdev/AshLib</RepositoryUrl>
 	<RepositoryType>git</RepositoryType>
 	<PackageProjectUrl>https://github.com/siljamdev/AshLib</PackageProjectUrl>
 	
 	<PackageLicenseExpression>MIT</PackageLicenseExpression>
-	
 	<PackageIcon>res/icon.png</PackageIcon>
 	<PackageReadmeFile>README.md</PackageReadmeFile>
   </PropertyGroup>
